# restful_server-client

./: README.md
client/: CMakeLists.txt  main.cpp
client/include/: Data.h  Request.h
client/src/: Data.cpp  Request.cpp
common/include/: Common.h
server/: CMakeLists.txt  main.cpp
server/include/: Handle.h
server/src/: Handle.cpp
util/include/: Util.h
util/src/: Util.cpp
